2002-10-16  Bastien Nocera  <hadess@hadess.net>

	* en_GB/en_GB.pl: updated some more translations, added support for
	translator_credits

2002-03-01  Fatih Demir <kabalak@gtranslator.org>

	* tr/: Added (back) Turkish directory.

2001-11-06  Carlos Perelló Marín <carlos@gnome-db.org>

	* allpo.pl, desk.pl, genreport-april.pl, genreport-new.pl:
	* genreport.pl, potfile.sh, ui-extract.pl, update.pl: Removed. Are
	obsolete by the new status scripts && intltool

2001-09-30  Ole Laursen  <olau@hardworking.dk>

	* extra-po/galeon: Removed the Galeon directory which is obsolete
	now since Galeon is in Gnome CVS.

2001-08-29  Ole Laursen  <olau@hardworking.dk>

	* translation-install/: Added a script for installing
	translations.

2001-07-29  Yanko Kaneti <yaneti@declera.com>

	* genreport-april.pl:
	* genreport-new.pl:
	* ru/langinfo.dat:
	* ru/langmod.dat:
	* ru/status.pl:s/bg_BG(\.cp1251)*/bg/

2001-07-19  Fatih Demir <kabalak@gtranslator.org>

	* extra-po/gwvedit: Added gwvedit pot file to GNOME CVS.

2001-06-11	Michael Twomey <michael.twomey@ireland.sun.com>

	* l10n-style-guides/zh_CN/L10NSTYGDZH.pdf: Added Simplified Chinese
	style guide.
	* l10n-style-guides/zh_TW/L10NSTYGDZHTW.pdf: Added Traditional
	Chinese style guide.
	* l10n-style-guides/ko/L10NSTYGDKO.pdg: Added Korean style guide.

2001-05-11  Fatih Demir <kabalak@gtranslator.org>

	* extra-po/gtkdial: Added gtkdial po(t)-files also to GNOME CVS.
	
2001-02-27  Michael Twomey <michael.twomey@ireland.sun.com>

	* l10n-style-guides: added containing the source and 
	output of Sun's localisation style guides. These will probably have
	to be rewritten into docbook but they provide a good start.

2001-02-16  Fatih Demir	<kabalak@gtranslator.org>

	* extra-po/helix-gdm2 & extra-po/gdm2beta5: Removed these
		directories from here -- the original gdm2 CVS module
		 is now the main source for gdm2 -- the old translations
		  are conserved in a tarball and available on gtranslator.org.
