@@ -1,3 +1,9 @@
+2003-01-29  Abel Cheung  <maddog@linux.org.hk>
+
+	* en_GB/en_GB.pl: Remove fuzzy from translation header, this is
+	  annoying when checking translation errors. Use global substitution
+	  to replace words.
+
 2002-10-16  Bastien Nocera  <hadess@hadess.net>
 
 	* en_GB/en_GB.pl: updated some more translations, added support for
